exercise(CI/CD - github actions): implementacion de ejercicio 11.4

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,3 +11,7 @@ jobs:
         steps:
             - name: Say hello step
               run: echo "Hello world"
+            - name: Now it is
+              run: date
+            - name: Direcotory content
+              run: ls -l
