--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "jest",
     "test:e2e": "playwright test --project=chromium --project=firefox",
     "test:e2e:report": "playwright show-report",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production"
   },
@@ -37,6 +39,7 @@
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "cypress": "^14.2.0",
     "eslint": "^8.56.0",
     "eslint-plugin-jest": "^27.6.1",
     "eslint-plugin-react": "^7.33.2",
@@ -60,7 +63,7 @@
   "jest": {
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
-      "e2e-test"
+      "e2", "e2e-test"
     ]
   }
 }
