--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "css-loader": "^6.8.1",
     "cypress": "^14.2.0",
     "eslint": "^8.56.0",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-jest": "^27.6.1",
     "eslint-plugin-react": "^7.33.2",
     "history": "^5.3.0",
@@ -63,7 +64,8 @@
   "jest": {
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
-      "e2", "e2e-test"
+      "e2",
+      "e2e-test"
     ]
   }
 }
