--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,11 +19,27 @@ jobs:
         run: npm run eslint
       - name: Build
         run: npm run build
-      - name: Jest run
+      - name: Jest test
         run: npm run test
-      - name: Cypress run
+      - name: Cypress test
         uses: cypress-io/github-action@v6
         with:
           command: npm run cypress:run
           start: npm run start-prod
           wait-on: http://localhost:5000
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+            name: playwright-report
+            path: playwright-report/
+            retention-days: 30\
+      - name: Trigger deployment
+        uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
+        with:
+          serviceId: ${{ secrets.RENDER_SERVICE_ID }}
+          apiKey: ${{ secrets.RENDER_API_KEY }}
+          multipleDeployment: false #optional, default true
